--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@ body {
 	background-image: url('../imgs/background/background-2.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 100vh;
+	height: 98vh;
 }
 
 section {
@@ -55,10 +55,11 @@ span {
 h2 {
 	font-size: 56px;
 	line-height: 56px;
+	font-weight: 700;
 }
 
 h4 {
-	font-size: 32px;
+	font-size: 24px;
 	line-height: 56px;
 }
 
