--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,3 +75,30 @@ p {
 .top60 {
 	top: 60vh;
 }
+
+@media (max-width: 414px){
+	h2 {
+		font-size: 28px;
+	}
+	.txt {
+		font-size: 24px;
+	}
+	.contatoTxt {
+		font-size: 24px;
+	}
+	.contatoImg {
+		width: 38px;
+	}
+}
+
+@media (width: 768px){
+	.txt {
+		font-size: 40px !important;
+	}
+	.contatoTxt {
+		font-size: 40px !important;
+	}
+	.contatoImg {
+		width: 40px !important;
+	}
+}
