--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,16 +41,38 @@ h3,
 h4,
 h5,
 h6,
+a,
 p,
 span {
    font-family: Gotham, Sans-Serif;
    font-weight: 500;
    color: #fff;
+   padding: 0;
+   margin: 0;
+}
+
+/* Alternate BootStrap Style */
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto, .container {
+   padding-right: 20px;
+   padding-left: 20px;
+}
+.row {
+   margin-right: -20px;
+   margin-left: -20px;
 }
 
 /* Navbar */
 nav.navbar {
    padding: 16px  24px;
+   background-color: rgba(29, 35, 30, .36);
+}
+.navbar-brand{
+   padding: 0;
+   margin: 0;
+}
+.navbarItem {
+   padding: 0 12px;
+   border: 0;
 }
 img.imgSvgLogo {
    width: 24px;
@@ -66,5 +88,28 @@ ul.listaNav {
 }
 li.itemNav {
    float: left;
-   padding: 0 24px;
+   padding: 0;
+   margin: 0;
+}
+
+/* Content Home */
+section#home {
+   height: 100vh;
+}
+h2.titleHome {
+   font-size: 32px;
+   font-weight: 700;
+}
+div.contentHome {
+   position: relative;
+   top: 50%;
+}
+a.knowHome {
+   padding: 13px 64.5px;
+   background-color: rgba(255, 255, 255, .4);
+   color: #FFF;
+   font-size: 17px;
+   border-radius: 12px;
+   margin-top: 20px;
+   position: absolute;
 }
