--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,10 @@ a.btnGray {
    position: absolute;
    font-weight: 700;
 }
+.imgProduct {
+   width: 100%;
+   border-radius: 10px;
+}
 
 /* Alternate BootStrap Style */
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto, .container {
@@ -220,21 +224,9 @@ h2.titleContent {
    padding: 0;
 }
 .productsItem  {
-   padding: 12px 0;
+   padding-top: 24px;
    text-align: center;
 }
-.productsItem img {
-   width: 100%;
-   border-radius: 10px;
-}
-/*.productsItem a {
-   color: #FFF;
-   padding: 13px 55px;
-   background-color: #319B42;
-   border-radius: 10px;
-   position: relative;
-   bottom: 14px;
-}*/
 .productsItem a {
    cursor: pointer;
 }
@@ -245,6 +237,45 @@ h2.titleContent {
    border-radius: 10px;
    position: relative;
    bottom: 14px;
+}
+
+/* Product */
+section#product {
+   padding-top: 69px;
+}
+#product table.table {
+   margin-top: 25px;
+}
+.imgProductItem {
+   margin-top: 24px;
+   border-radius: 10px;
+}
+#product thead th {
+   padding: 0;
+   border: none;
+}
+.titleProduct {
+   font-size: 22px;
+   color: #319B42;
+}
+.tableProduct {
+   list-style: none;
+}
+#product tbody th {
+   font-size: 14px;
+   color: rgba(0, 0, 0, .87);
+   font-weight: 500;
+   padding: 19px 0;
+   border-top: none;
+   border-bottom: 0.5px solid #C1C1C1;
+}
+#product tbody td {
+   font-size: 14px;
+   color: rgba(0, 0, 0, .56);
+   font-weight: 400;
+   padding: 19px 0;
+   border-top: none;
+   border-bottom: 0.5px solid #C1C1C1;
 }
 
 /* Footer */
