--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@ a.btnGreenHome:active {
    right: 0;
    left: 0;
    z-index: 1030;
-   bottom: 100px;
+   bottom: 20%;
 }
 
 /* Alternate BootStrap Style */
