--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -453,3 +453,70 @@ p.textFooterLine {
    position: fixed;
 }
 /* Media Map */
+
+
+
+/* Testando transition checkbox */
+.menu {
+   width: 88px;
+   height: 88px;
+   position: relative;
+}
+
+.menu label {
+   width: 100%;
+   height: 100%;
+   background-color: transparent;
+   position: absolute;
+   transition: all .3s linear;
+}
+
+#check{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  opacity: .0;
+ }
+
+.menu span {
+   width: 60px;
+   height: 8px;
+   top: 40px;
+   left: 14px;
+   position: absolute;
+   background-color: #FFF;
+   transition: all .3s linear;
+}
+
+.menu span:before {
+   content: '';
+   width: 60px;
+   height: 8px;
+   bottom: -20px;
+   position: absolute;
+   background-color: #FFF;
+   transition: all .3s linear;
+}
+
+.menu span:after {
+   content: '';
+   width: 60px;
+   height: 8px;
+   top: -20px;
+   position: absolute;
+   background-color: #FFF;
+   transition: all .3s linear;
+}
+
+#check:checked ~ span {
+   background-color: transparent;
+}
+
+#check:checked ~ span:before {
+   transform: translate(0, -20px) rotate(-45deg);
+}
+
+#check:checked ~ span:after {
+   transform: translate(0, 20px) rotate(45deg);
+}
