--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -515,8 +515,10 @@ p.textFooterLine {
 
 #check:checked ~ span:before {
    transform: translate(0, -20px) rotate(-45deg);
+   background-color: #319B42;
 }
 
 #check:checked ~ span:after {
    transform: translate(0, 20px) rotate(45deg);
+   background-color: #319B42;
 }
