--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -292,6 +292,10 @@ button.btnGreen {
 section#product {
    padding-top: 69px;
 }
+.owl-item {
+   width: auto !important;
+   margin: 0 13.5px;
+}
 .owl-carousel div {
    width: auto;
 }
