--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,7 @@ body {
    margin: 0;
    padding: 0;
    border: 0;
+   overflow-x: hidden;
 }
 
 .imageHomeMobile {
@@ -347,6 +348,32 @@ section#information {
    .informationMobile {
       display: none;
    }
+   .infomationDesktop .row {
+      margin-bottom: 72px;
+   }
+   .textHomeDesk {
+      margin: auto;
+   }
+   .imgHome {
+      width: 444px;
+      height: auto;
+   }
+   .seedsVisao {
+      width: 411px;
+      height: auto;
+   }
+   .seedsMissao {
+      width: 411px;
+      height: auto;
+      left: -100px;
+      top: 160px;
+   }
+   .seedsValores{
+      width: 592px;
+      height: auto;
+      right: -50px;
+      top: 120px;
+   }
 }
 /* Pag Products */
 section#products {
@@ -575,6 +602,22 @@ p.textFooterLine {
 
 .botaoFixo {
    position: fixed;
+}
+@media(max-width: 768px){
+   .footerMobile {
+      display: block;
+   }
+   .footerDektop {
+      display: none;
+   }
+}
+@media(min-width: 1024px){
+   .footerMobile {
+      display: none;
+   }
+   .footerDektop {
+      display: block;
+   }
 }
 /* Media Map */
 
