--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -599,6 +599,9 @@ section#partner {
    .parceiroDesktop iframe {
       min-height: 400px;
    }
+   section#product {
+      padding-top: 100px;
+   }
 }
 
 /* Footer */
