--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,6 +65,10 @@ a.btnGreenHome {
    position: absolute;
    font-weight: 700;
 }
+.zeraPM {
+   padding: 0;
+   margin: 0;
+}
 a.btnGreenHome:hover {
    background-color: #36CB4E;
 }
@@ -651,6 +655,13 @@ p.textFooterLine {
 .botaoFixo {
    position: fixed;
 }
+.footerCopy {
+   color:rgba(0, 0, 0, .56);
+   font-size: 14px;
+   margin: 10px 0;
+   border-top: 0.5px solid #C1C1C1;
+   padding-top: 10.5px;
+}
 @media(max-width: 768px){
    .footerMobile {
       display: block;
@@ -669,6 +680,51 @@ p.textFooterLine {
    .ondeEstamos {
       margin-top: 32px;
       margin-bottom: 88px;
+   }
+   .imgFooter {
+      background-image: url('../imgs/background/footer.png');
+      width: 100%;
+      height: 423px;
+      background-repeat: no-repeat;
+      text-align: center;
+      background-size: cover;
+   }
+   .footerText {
+      position: relative;
+      top: 50%;
+      font-size: 32px;
+      font-weight: 700;
+      color:#FFF;
+   }
+   .footerLogo {
+      width: 124px;
+      position: absolute;
+      bottom: 23px;
+      right: 60px;
+   }
+   .footerCaixaLogos {
+      margin: 76px auto 67px auto;
+   }
+   .listFooter {
+      list-style: none;
+      display: flex;
+      padding: 0;
+      margin: 0;
+   }
+   .footerItemPadding {
+      padding: 15px 24px 35px 0px;
+   }
+   img.footerImage {
+      width: 21px;
+   }
+   ul.navFooter {
+      list-style: none;
+   }
+   a.navFooter {
+      color: rgba(0, 0, 0, .57);
+   }
+   .footerActive {
+      color: rgba(0, 0, 0, .87);
    }
 }
 /* Media Map */
