--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,7 @@ a.btnGreenHome {
    margin-top: 20px;
    position: absolute;
    font-weight: 500;
+   transition: 0.2s;
 }
 .zeraPM {
    padding: 0;
@@ -86,6 +87,11 @@ a.btnGreenHome:active {
 .imgProduct {
    width: 100%;
    border-radius: 10px;
+}
+.imgProduct:hover{
+   width: 100%;
+   border-radius: 10px;
+   opacity: 0.6;
 }
 .navContato {
    position: absolute;
@@ -241,6 +247,10 @@ li.itemNav {
    img.logoDesktop {
       display: none;
    }
+   .productsItem {
+      width: 33%;
+      display: inline-block;
+   }
 }
 @media(min-width: 1024px){
    a.nav-link {
@@ -255,6 +265,7 @@ li.itemNav {
    }
    .navbar-nav .nav-item .nav-link {
       padding: 7px 0 2px 0;
+      transition: 0.2s;
    }
    .navbar-nav .active .nav-link {
       border-bottom: 2px solid #319B42;
@@ -319,7 +330,8 @@ section#information {
    margin-top: 22px;
 }
 .nav-tabs a {
-   font-size: 17px;
+   font-size: 1.12em;
+   font-weight: 700;
 }
 #information li {
    width: 33.33%;
@@ -328,10 +340,12 @@ section#information {
    color: rgba(0, 0, 0, .30);
    padding-bottom: 10px;
    line-height: 35px;
+   transition: 0.2s;
 }
 .nav-tabs li a.active {
    color: rgba(0, 0, 0, 1);
    border-bottom: 3px solid #319B42;
+   transition: 0.2s;
 }
 .nav-tabs li a.active:hover {
    text-decoration: none;
@@ -388,6 +402,14 @@ section#information {
    }
    .informationMobile {
       display: unset;
+   }
+   h2.titleHome {
+      font-size: 2.24em;
+      margin: 0 0 4px 0;
+      font-weight: 700;
+   }
+   .contentHome p{
+      color: #FFF;
    }
 }
 @media(min-width: 1024px){
@@ -683,6 +705,7 @@ section#partner {
    border-radius: 12px;
    font-weight: 700;
    margin-top: 0.4em;
+   transition: 0.2s;
 }
 @media(max-width: 768px){
    .parceiroDesktop iframe {
@@ -728,10 +751,17 @@ ul.footerList li {
 a.developers {
    color: rgba(0, 0, 0, .87);
    font-weight: 700;
+   transition: 0.3s;
 }
+
+a.developers:hover {
+   color: #319B42;
+   font-weight: 700;
+}
+
 p.textFooter {
    color:rgba(0, 0, 0, .56);
-   font-size: 14px;
+   font-size: 0.96em;
    margin: 10px 0;
    font-weight: 400;
 }
@@ -792,6 +822,7 @@ p.textFooterLine {
       font-size: 32px;
       font-weight: 700;
       color:#FFF;
+      text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
    }
    .footerLogo {
       width: 124px;
@@ -811,17 +842,32 @@ p.textFooterLine {
    .footerItemPadding {
       padding: 15px 24px 35px 0px;
    }
+
+   .navContato a, .listFooter li a {
+      transition: 0.3s;
+   }
+
+   .navContato a:hover, .listFooter li a:hover {
+      opacity: 0.6;
+   }
+
    img.footerImage {
       width: 21px;
    }
    ul.navFooter {
       list-style: none;
+      padding: 0;
    }
    a.navFooter {
-      color: rgba(0, 0, 0, .57);
+      color: rgba(0, 0, 0, .56);
+      transition: 0.3s;
+   }
+   a.navFooter:hover{
+      color: rgba(0, 0, 0, .86);
    }
    .footerActive {
-      color: rgba(0, 0, 0, .87);
+      color: rgba(0, 0, 0, .56);
+      font-size: 0.82em;
    }
 }
 /* Media Map */
